; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavutil/tests/extr_xtea.c_test_xtea.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavutil/tests/extr_xtea.c_test_xtea.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"%s failed\0Agot      \00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"%02x \00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"\0Aexpected \00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*, i32*, i32, i32*, i32, i8*, void (i32*, i32*, i32*, i32, i32*, i32)*)* @test_xtea to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_xtea(i32* %0, i32* %1, i32* %2, i32* %3, i32 %4, i32* %5, i32 %6, i8* %7, void (i32*, i32*, i32*, i32, i32*, i32)* %8) #0 {
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca i8*, align 8
  %18 = alloca void (i32*, i32*, i32*, i32, i32*, i32)*, align 8
  %19 = alloca i32, align 4
  store i32* %0, i32** %10, align 8
  store i32* %1, i32** %11, align 8
  store i32* %2, i32** %12, align 8
  store i32* %3, i32** %13, align 8
  store i32 %4, i32* %14, align 4
  store i32* %5, i32** %15, align 8
  store i32 %6, i32* %16, align 4
  store i8* %7, i8** %17, align 8
  store void (i32*, i32*, i32*, i32, i32*, i32)* %8, void (i32*, i32*, i32*, i32, i32*, i32)** %18, align 8
  %20 = load void (i32*, i32*, i32*, i32, i32*, i32)*, void (i32*, i32*, i32*, i32, i32*, i32)** %18, align 8
  %21 = load i32*, i32** %10, align 8
  %22 = load i32*, i32** %11, align 8
  %23 = load i32*, i32** %12, align 8
  %24 = load i32, i32* %14, align 4
  %25 = load i32*, i32** %15, align 8
  %26 = load i32, i32* %16, align 4
  call void %20(i32* %21, i32* %22, i32* %23, i32 %24, i32* %25, i32 %26)
  %27 = load i32*, i32** %11, align 8
  %28 = load i32*, i32** %13, align 8
  %29 = load i32, i32* %14, align 4
  %30 = mul nsw i32 8, %29
  %31 = call i64 @memcmp(i32* %27, i32* %28, i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %71

33:                                               ; preds = %9
  %34 = load i8*, i8** %17, align 8
  %35 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0), i8* %34)
  store i32 0, i32* %19, align 4
  br label %36

36:                                               ; preds = %48, %33
  %37 = load i32, i32* %19, align 4
  %38 = load i32, i32* %14, align 4
  %39 = mul nsw i32 8, %38
  %40 = icmp slt i32 %37, %39
  br i1 %40, label %41, label %51

41:                                               ; preds = %36
  %42 = load i32*, i32** %11, align 8
  %43 = load i32, i32* %19, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds i32, i32* %42, i64 %44
  %46 = load i32, i32* %45, align 4
  %47 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %46)
  br label %48

48:                                               ; preds = %41
  %49 = load i32, i32* %19, align 4
  %50 = add nsw i32 %49, 1
  store i32 %50, i32* %19, align 4
  br label %36

51:                                               ; preds = %36
  %52 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0))
  store i32 0, i32* %19, align 4
  br label %53

53:                                               ; preds = %65, %51
  %54 = load i32, i32* %19, align 4
  %55 = load i32, i32* %14, align 4
  %56 = mul nsw i32 8, %55
  %57 = icmp slt i32 %54, %56
  br i1 %57, label %58, label %68

58:                                               ; preds = %53
  %59 = load i32*, i32** %13, align 8
  %60 = load i32, i32* %19, align 4
  %61 = sext i32 %60 to i64
  %62 = getelementptr inbounds i32, i32* %59, i64 %61
  %63 = load i32, i32* %62, align 4
  %64 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i32 %63)
  br label %65

65:                                               ; preds = %58
  %66 = load i32, i32* %19, align 4
  %67 = add nsw i32 %66, 1
  store i32 %67, i32* %19, align 4
  br label %53

68:                                               ; preds = %53
  %69 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  %70 = call i32 @exit(i32 1) #3
  unreachable

71:                                               ; preds = %9
  ret void
}

declare dso_local i64 @memcmp(i32*, i32*, i32) #1

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
